prevent horizontal scrolling on ios

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,6 +5,7 @@
 html,
 body {
     min-height: 800px;
+    overflow-x: hidden;
 }
 body.list_holds,
 body.list_checkouts {
